objects/Queue_Stat__c.object
<CustomObject>
    <fields>
        <fullName>Abandon_Rate__c</fullName>
        <formula>Abandoned_Calls__c / Inbound_Calls__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abandon Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abandoned_Calls__c</fullName>
        <label>Abandoned Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Queue_Time__c</fullName>
        <label>Avg Queue Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Per_Agent__c</fullName>
        <label>Calls Per Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Queued__c</fullName>
        <label>Calls Queued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handle_Time__c</fullName>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Calls__c</fullName>
        <label>Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longest_Queue_Time__c</fullName>
        <label>Longest Queue Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Calls__c</fullName>
        <label>Outbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_to_Answer__c</fullName>
        <label>Speed to Answer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbdays__c</fullName>
        <label>db_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Queue Stat</label>
    <nameField>
        <displayFormat>QS-{0000}</displayFormat>
        <label>Queue Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>